Cleaning 3rd party projects

--- a/fr.inria.diverse.ocllite.3rdparty.parent/.project
+++ b/fr.inria.diverse.ocllite.3rdparty.parent/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>itp02-pomfirst-parent</name>
+	<name>ocllite-pomfirst-parent</name>
 	<comment></comment>
 	<projects>
 	</projects>
